deployment/yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app-backend
  namespace: wcare-ns
  labels:
    app: wcare-application
    subname: library-app-backend
spec:
  selector:
    matchLabels:
      app: wcare-application
      subname: library-app-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: wcare-application
        subname: library-app-backend
    spec:
      containers:
        - name: container-wcareweb
          image: image-registry.openshift-image-registry.svc:5000/wcare-ns/library-app-backend:latest
          # image: "gandhicloudlab/wcareweb:latest"
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 9443
            initialDelaySeconds: 45
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 3
          ports:
          - containerPort: 9080
            name: 9080-tcp
            protocol: TCP
          - containerPort: 9443
            name: 9443-tcp
            protocol: TCP
          - containerPort: 9082
            name: http
            protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9443
            initialDelaySeconds: 180
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
            failureThreshold: 3
